[gd_scene load_steps=3 format=3 uid="uid://b7djtpn5ev2e8"]

[ext_resource type="Script" path="res://Base/Scripts/StartMenu.gd" id="1_nih8j"]
[ext_resource type="PackedScene" uid="uid://b26n51cmttgax" path="res://Base/Scenes/TopDown/topdown_world.tscn" id="2_y844v"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_nih8j")
start_level = ExtResource("2_y844v")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.105882, 0.101961, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
